--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1179,7 +1179,7 @@
                                         Does your experience have any
                                         accessibility features? (optional)
                                       </div>
-                                      <div class="_ebqknn"></div>
+                                      <div class="tab__header-desc"></div>
                                     </legend>
                                     <div class="_4l12l8">
                                       <div
@@ -1326,7 +1326,7 @@
                                     <div class="_1lmb2fq">
                                       What activity level should people expect?
                                     </div>
-                                    <div class="_ebqknn">
+                                    <div class="tab__header-desc">
                                       Think about how active people will get
                                       during your entire experience.
                                     </div>
@@ -1402,7 +1402,7 @@
                                     <div class="_1lmb2fq">
                                       What skill level is required?
                                     </div>
-                                    <div class="_ebqknn">
+                                    <div class="tab__header-desc">
                                       Think about how experienced people should
                                       be to take your activity.
                                     </div>
