--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -747,7 +747,7 @@
                                               What activity level should people
                                               expect?
                                             </div>
-                                            <div class="_ebqknn">
+                                            <div class="tab__header-desc">
                                               Think about how active people will
                                               get during your entire experience.
                                             </div>
@@ -827,7 +827,7 @@
                                             <div class="_1lmb2fq">
                                               What skill level is required?
                                             </div>
-                                            <div class="_ebqknn">
+                                            <div class="tab__header-desc">
                                               Think about how experienced people
                                               should be to take your activity.
                                             </div>
