--- a/explore-who.html
+++ b/explore-who.html
@@ -252,7 +252,7 @@
                                                         Adults
                                                       </div>
                                                       <div
-                                                        class="_ebqknn"
+                                                        class="tab__header-desc"
                                                         id="searchFlow-subtitle-label-stepper-adults"
                                                       >
                                                         Ages 13 or above
@@ -348,7 +348,7 @@
                                                         Children
                                                       </div>
                                                       <div
-                                                        class="_ebqknn"
+                                                        class="tab__header-desc"
                                                         id="searchFlow-subtitle-label-stepper-children"
                                                       >
                                                         Ages 2–12
@@ -444,7 +444,7 @@
                                                         Infants
                                                       </div>
                                                       <div
-                                                        class="_ebqknn"
+                                                        class="tab__header-desc"
                                                         id="searchFlow-subtitle-label-stepper-infants"
                                                       >
                                                         Under 2
@@ -540,7 +540,7 @@
                                                         Pets
                                                       </div>
                                                       <div
-                                                        class="_ebqknn"
+                                                        class="tab__header-desc"
                                                         id="searchFlow-subtitle-label-stepper-pets"
                                                       >
                                                         <button
