rename horizontal__line & tab__content-divider -> hr

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -350,7 +350,7 @@
                                       Account
                                     </button>
                                   </div>
-                                  <hr class="horizontal__line" />
+                                  <hr class="hr" />
                                   <div>
                                     <div
                                       role="tabpanel"
@@ -455,7 +455,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="section-heading-semibold">
@@ -513,7 +513,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="section-heading-semibold">
@@ -572,7 +572,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="section-heading-semibold">
@@ -651,7 +651,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="relative">
                                         <div class="page-shell-mobile__container">
                                           <div
@@ -795,7 +795,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="section-heading-semibold">
@@ -834,7 +834,7 @@
                                           </div>
                                         </section>
                                       </div>
-                                      <hr class="tab__content-divider" />
+                                      <hr class="hr" />
                                       <div class="margin__y-24">
                                         <section>
                                           <div class="section-heading-semibold">
@@ -1145,7 +1145,7 @@
                                           Account
                                         </button>
                                       </div>
-                                      <hr class="horizontal__line" />
+                                      <hr class="hr" />
                                       <div>
                                         <div
                                           role="tabpanel"
@@ -1252,7 +1252,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="margin__y-24">
                                             <section>
                                               <div class="section-heading-semibold">
@@ -1310,7 +1310,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="margin__y-24">
                                             <section>
                                               <div class="section-heading-semibold">
@@ -1369,7 +1369,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="margin__y-24">
                                             <section>
                                               <div class="section-heading-semibold">
@@ -1448,7 +1448,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="relative">
                                             <div class="tab__content-visibility">
                                               <div
@@ -1592,7 +1592,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="margin__y-24">
                                             <section>
                                               <div class="section-heading-semibold">
@@ -1631,7 +1631,7 @@
                                               </div>
                                             </section>
                                           </div>
-                                          <hr class="tab__content-divider" />
+                                          <hr class="hr" />
                                           <div class="margin__y-24">
                                             <section>
                                               <div class="section-heading-semibold">
