rename mobile account notification

--- a/basics.html
+++ b/basics.html
@@ -43,7 +43,7 @@
 
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_1hhecre">
               <div class="_gjnbsm" aria-hidden="false">
