--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -36,7 +36,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_evqnuxp"></div>
             <main class="_fmgjts">
@@ -71,7 +71,7 @@
               <div class="_19co9bom" aria-hidden="false">
                 <div class="_l6v72tr">
                   <div class="_fwc96">
-                    <div class="_1ynbv25 hidden-md">
+                    <div class="page-shell-mobile__container hidden-md">
                       <div class="_muecdg">
                         <button
                           aria-label="Close"
