--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -13,7 +13,7 @@
   <body class="with-new-header">
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_evqnuxp"></div>
             <main class="_fmgjts">
@@ -21,7 +21,7 @@
                 <div class="_oy5ese hidden-md">
                   <div class="_1l7bhkmt">
                     <div class="_fwc96">
-                      <div class="_1ynbv25">
+                      <div class="page-shell-mobile__container">
                         <div>
                           <button
                             aria-label="Close"
