--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -33,7 +33,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_ntec918"></div>
             <main class="_fmgjts">
@@ -276,7 +276,7 @@
               <div class="_gqn5ll" aria-hidden="false">
                 <div class="_1j8ocyu">
                   <div class="_fwc96">
-                    <div class="_1ynbv25 hidden-md">
+                    <div class="page-shell-mobile__container hidden-md">
                       <div class="_muecdg">
                         <button
                           aria-label="Close"
