--- a/covidsafety.html
+++ b/covidsafety.html
@@ -35,7 +35,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div
               data-veloute="landing_page_sections"
@@ -2162,7 +2162,7 @@
                       <span class="text-highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
-                          <div class="_p03egf">
+                          <div class="page-shell-mobile__mb-16">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
