--- a/experienceType.html
+++ b/experienceType.html
@@ -2599,7 +2599,7 @@
     </style>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_1hhecre">
               <div class="_gjnbsm" aria-hidden="false">
