--- a/experiences.html
+++ b/experiences.html
@@ -1302,7 +1302,7 @@
           display: none !important;
         }
       }
-      ._p03egf {
+      .page-shell-mobile__mb-16 {
         margin-bottom: 16px !important;
       }
       ._15m7xnk {
@@ -3976,7 +3976,7 @@
     </style>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_18t1hph">
               <header>
@@ -4908,7 +4908,7 @@
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
-                        <div class="_p03egf">
+                        <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
