--- a/merchandising.html
+++ b/merchandising.html
@@ -38,7 +38,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true" class="hidden-md">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div>
               <div
@@ -55,7 +55,7 @@
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
-                        <div class="_h0klba">
+                        <div class="page-shell__menu">
                           <a
                             class="_1e1aumhl"
                             type="button"
@@ -91,14 +91,14 @@
                             </div>
                             <div class="_s4tclwz">Explore</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
                             aria-label="Wishlists"
                             href="/wishlists"
                             ><div class="flex">
-                              <div class="_tbbnrnx">
+                              <div class="page-shell__menu-item-icon-wrapper">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -121,16 +121,16 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Wishlists</div></a
+                            <div class="page-shell__menu-item-text">Wishlists</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
                             aria-label="Trips"
                             href="/trips/v1"
                             ><div class="flex">
-                              <div class="_tbbnrnx" style="top: -1px">
+                              <div class="page-shell__menu-item-icon-wrapper" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -150,16 +150,16 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Trips</div></a
+                            <div class="page-shell__menu-item-text">Trips</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
                             aria-label="Inbox"
                             href="/guest/inbox"
                             ><div class="flex">
-                              <div class="_tbbnrnx" style="top: 1px">
+                              <div class="page-shell__menu-item-icon-wrapper" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -179,9 +179,9 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Inbox</div></a
+                            <div class="page-shell__menu-item-text">Inbox</div></a
                           ><a
-                            class="_45o9ez"
+                            class="page-shell__menu-item"
                             type="button"
                             aria-current="false"
                             aria-disabled="false"
@@ -189,7 +189,7 @@
                             href="/account-settings"
                             data-veloute="pwa-tab-bar-item-profile"
                             ><div class="flex">
-                              <div class="_tbbnrnx">
+                              <div class="page-shell__menu-item-icon-wrapper">
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -209,7 +209,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_1yqbv3i">Profile</div></a
+                            <div class="page-shell__menu-item-text">Profile</div></a
                           >
                         </div>
                       </nav>
@@ -4171,7 +4171,7 @@
     </div>
     <div data-application="true" class="hidden block-md">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div>
               <div
@@ -12883,7 +12883,7 @@
                                                 >
                                                 <section>
                                                   <div class="_1udzt2s">
-                                                    <div class="_p03egf">
+                                                    <div class="page-shell-mobile__mb-16">
                                                       <div class="flex">
                                                         <span class="_19c5bku"
                                                           ><button
