--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -32,7 +32,7 @@
 
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <header>
               <div class="_t4e07m">
