--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -37,7 +37,7 @@
 
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <header role="banner" class="_8iqo2b">
               <div class="_19trzwd">
