--- a/resources.html
+++ b/resources.html
@@ -26,7 +26,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_ousp44">
               <header role="banner" class="_1eqc9dx">
@@ -405,7 +405,7 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <div class="_1ynbv25">
+                                  <div class="page-shell-mobile__container">
                                     <span
                                       class="_y9cbsa"
                                       style="
@@ -432,7 +432,7 @@
                                 </h1>
                               </div>
                               <div class="_1i6nsdp">
-                                <div class="_1ynbv25">
+                                <div class="page-shell-mobile__container">
                                   <span
                                     class="_y9cbsa"
                                     style="
@@ -488,7 +488,7 @@
                                               href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -589,7 +589,7 @@
                                               href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -691,7 +691,7 @@
                                               href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -792,7 +792,7 @@
                                               href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -893,7 +893,7 @@
                                               href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -994,7 +994,7 @@
                                               href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                               class="_11eqlma4"
                                               ><div class="relative">
-                                                <div class="_1ynbv25">
+                                                <div class="page-shell-mobile__container">
                                                   <div
                                                     class="lite-image"
                                                     role="img"
@@ -5371,7 +5371,7 @@
                       <span class="text-highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
-                          <div class="_p03egf">
+                          <div class="page-shell-mobile__mb-16">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
