--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -31,7 +31,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div id="FMP-target">
               <div>
