--- a/transaction_history.html
+++ b/transaction_history.html
@@ -37,7 +37,7 @@
 
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div>
               <div class="dir dir-ltr" style="--vh: 8.65px">
@@ -426,10 +426,10 @@
                                     <div class="_1ouw2w0">
                                       <section
                                         role="status"
-                                        class="w1y25zdv i144hzgs dir dir-ltr"
+                                        class="page-shell-mobile__alert-notification page-shell-mobile__alert-attr-notifcation dir dir-ltr"
                                       >
-                                        <div class="ccmqn89 dir dir-ltr">
-                                          <div class="c1mzlq0d dir dir-ltr">
+                                        <div class="page-shell-mobile__alert-icon-wrapper dir dir-ltr">
+                                          <div class="page-shell-mobile__alert-icon dir dir-ltr">
                                             <svg
                                               viewBox="0 0 16 16"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -449,23 +449,23 @@
                                             </svg>
                                           </div>
                                         </div>
-                                        <div class="mbv7i5o dir dir-ltr">
+                                        <div class="page-shell-mobile__alert-header dir dir-ltr">
                                           <h1
                                             tabindex="-1"
                                             class="heading"
                                             elementtiming="LCP-target"
                                           >
-                                            <div class="hk7fm8a dir dir-ltr">
+                                            <div class="page-shell-mobile__alert-header-text dir dir-ltr">
                                               Add a payout method
                                             </div>
                                           </h1>
                                           <div
-                                            class="m1g17ezz h1q6ioub dir dir-ltr"
+                                            class="page-shell-mobile__alert-header-desc page-shell-mobile__alert-header-desc-color dir dir-ltr"
                                           >
                                             You'll need to set up your payouts
                                             in order to get paid.
                                           </div>
-                                          <div class="a106r80v dir dir-ltr">
+                                          <div class="page-shell-mobile__alert-header-button dir dir-ltr">
                                             <div class="ady5cna dir dir-ltr">
                                               <a
                                                 href="/help/topic/1452/payout-methods"
