--- a/calendar_week.html
+++ b/calendar_week.html
@@ -37,7 +37,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_18t1hph">
               <header>
