--- a/dashboard.html
+++ b/dashboard.html
@@ -951,7 +951,7 @@
           display: none !important;
         }
       }
-      ._p03egf {
+      .page-shell-mobile__mb-16 {
         margin-bottom: 16px !important;
       }
       ._15m7xnk {
@@ -2325,7 +2325,7 @@
     </style>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_18t1hph">
               <header>
@@ -3285,7 +3285,7 @@
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
-                        <div class="_p03egf">
+                        <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
