--- a/inbox.html
+++ b/inbox.html
@@ -7251,7 +7251,7 @@
     </style>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_18t1hph">
               <header>
