--- a/insights.html
+++ b/insights.html
@@ -37,7 +37,7 @@
 
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_18t1hph">
               <header>
@@ -1843,7 +1843,7 @@
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
-                        <div class="_p03egf">
+                        <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
