--- a/submission/review.html
+++ b/submission/review.html
@@ -36,7 +36,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="app-theme">
           <div>
             <div class="_1hhecre">
               <div class="_gjnbsm" aria-hidden="false">
